--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,10 +9,7 @@
                 "-g",
                 "${file}",
                 "-o",
-                // "${fileDirname}\\${fileBasenameNoExtension}.exe"
-                // "${fileDirname}\\output\\${fileBasenameNoExtension}.exe"
-                "${fileDirname}\\output\\test.exe"//所有输出都为test.exe，能运行中文名的文件
-
+                "${fileDirname}\\output\\test.exe"//输出问价都是test,可以中文命名
             ],
             "options": {
                 "cwd": "D:/MinGW64/bin"
@@ -22,8 +19,53 @@
             ],
             "group": {
                 "kind": "build",
-                "isDefault": true
+                // "isDefault": true
+                "isDefault": false
             },
+            "detail": "调试器生成的任务。"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++.exe 生成活动文件",
+            "command": "D:\\MinGW64\\bin\\g++.exe",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                // "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${fileDirname}\\output\\test.exe"
+            ],
+            "options": {
+                // "cwd": "${fileDirname}"
+                "cwd": "D:/MinGW64/bin"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "调试器生成的任务。"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: cpp.exe 生成活动文件",
+            "command": "D:\\MinGW64\\bin\\cpp.exe",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                // "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${fileDirname}\\output\\test.exe"
+            ],
+            "options": {
+                // "cwd": "${fileDirname}"
+                "cwd": "D:/MinGW64/bin"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
             "detail": "调试器生成的任务。"
         }
     ],
