--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,18 +1,20 @@
 {
+    "version": "2.0.0",
     "tasks": [
         {
             "type": "cppbuild",
             "label": "C/C++: gcc.exe 生成活动文件",
-            "command": "D:/MinGW64/bin/gcc.exe",
+            "command": "D:\\MinGW64\\bin\\gcc.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
+                //"${fileDirname}\\${fileBasenameNoExtension}.exe"
                 "${fileDirname}\\output\\test.exe"//输出文件都是test,可以中文命名
             ],
             "options": {
-                "cwd": "D:/MinGW64/bin"
+                "cwd": "D:\\MinGW64\\bin"
             },
             "problemMatcher": [
                 "$gcc"
@@ -38,7 +40,7 @@
             ],
             "options": {
                 // "cwd": "${fileDirname}"
-                "cwd": "D:/MinGW64/bin"
+                "cwd": "D:\\MinGW64\\bin"
             },
             "problemMatcher": [
                 "$gcc"
@@ -60,7 +62,7 @@
             ],
             "options": {
                 // "cwd": "${fileDirname}"
-                "cwd": "D:/MinGW64/bin"
+                "cwd": "D:\\MinGW64\\bin"
             },
             "problemMatcher": [
                 "$gcc"
@@ -69,5 +71,5 @@
             "detail": "调试器生成的任务。"
         }
     ],
-    "version": "2.0.0"
+    
 }
